[package]
name = "rust-quiz"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"
[[bin]]
name = "quiz-1"
path = "src/bin/quiz_1/rust_quiz_1.rs"
[[bin]]
name = "quiz-2"
path = "src/bin/quiz_2/rust_quiz_2.rs"
[[bin]]
name = "quiz-3"
path = "src/bin/quiz_3/rust_quiz_3.rs"